# OpenGL_GLFW

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
assets/: stanford-bunny.mtl
build.bak/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  OpenGL_GLFW  build.ninja  shader.fs  shader.vs
build.bak/.cmake/api/v1/reply/: cache-v2-acb2e238ea643eb2e142.json  cmakeFiles-v1-f0a0ed7073da2d3dd89f.json  codemodel-v2-f9747c8636e0b9449556.json  directory-src.Getting-Started.5.Coord-Systems-Debug-5bc87afdd585db08f500.json  index-2024-02-14T21-53-57-0821.json  target-Continuous-Debug-f4c0f817a2e8e3af711f.json  target-ContinuousBuild-Debug-c4e76991cf438ffec30b.json  target-ContinuousConfigure-Debug-7e28d8e4f90f51c18b0f.json  target-ContinuousCoverage-Debug-eebef6d7dff76d59f122.json  target-ContinuousMemCheck-Debug-e8481afd83568402b3ad.json  target-ContinuousStart-Debug-fc0aec95451123a5dcf6.json  target-ContinuousSubmit-Debug-e525753d124b73f19384.json  target-ContinuousTest-Debug-1c8909919bde37c5cb0e.json  target-ContinuousUpdate-Debug-078db0de1b3cfaa61e5d.json  target-Coord-Systems-Debug-9855c4c4997511a7f3f7.json  target-Experimental-Debug-6560d7deef841143e0d4.json  target-ExperimentalBuild-Debug-65549694603783bb5481.json  target-ExperimentalConfigure-Debug-dfce48cce99cc59ad090.json  target-ExperimentalCoverage-Debug-a0f36382bd70efa9423e.json  target-ExperimentalMemCheck-Debug-af715ac30ac606073768.json  target-ExperimentalStart-Debug-4705629e0575671367d3.json  target-ExperimentalSubmit-Debug-127758bbe1ec9eb1ec20.json  target-ExperimentalTest-Debug-10588bd0cff66539b8d2.json  target-ExperimentalUpdate-Debug-59f5fce1f287f6c64736.json  target-Nightly-Debug-22e57642ae977a7d00a4.json  target-NightlyBuild-Debug-380a2e93a02d27c2b80f.json  target-NightlyConfigure-Debug-d337a3de979707fbaa80.json  target-NightlyCoverage-Debug-c001024fcbd1d42b2fdd.json  target-NightlyMemCheck-Debug-e770f0a590aa5a535b7a.json  target-NightlyMemoryCheck-Debug-1ed103e5cf43d070262b.json  target-NightlyStart-Debug-9cc800cb27a969827d77.json  target-NightlySubmit-Debug-da8a960c266cff72c8e7.json  target-NightlyTest-Debug-56bd245959ea1a6b549e.json  target-NightlyUpdate-Debug-63d27f134286101baaaa.json
build.bak/src/Getting-Started/5.Coord-Systems/: Coord-Systems  DartConfiguration.tcl
include/: model.h
include/glad/: glad.h
include/rgb-hsl/: hsl_rgb.h
src/: glad.c  main.cpp
src/4.Transformations/: shader.fs
src/5.Coord-Systems/: Coord-Systems.cpp
src/6.Camera/: Camera.cpp  shader.fs
src/Advanced-Lighting/1.Advanced-Lighting/: Advanced-Lighting.cpp  CMakeLists.txt  colors.fs
src/Advanced-Lighting/2.Gamma-Correction/: CMakeLists.txt  Gamma-Correction.cpp  colors.fs
src/Advanced-Lighting/3.Shadows/Shadow-Mapping/: CMakeLists.txt  Shadow-Mapping.cpp  colors.fs
src/Advanced-OpenGL/1.Depth-Testing/: CMakeLists.txt  Depth-Testing.cpp  unlit.fs
src/Advanced-OpenGL/2.Stencil-Testing/: CMakeLists.txt  Stencil-Testing.cpp  lit.fs
src/Advanced-OpenGL/3.Blending/: Blending.cpp  CMakeLists.txt
src/Advanced-OpenGL/4.Face-Culling/: CMakeLists.txt  Face-Culling.cpp  light_cube.vs  lit.fs
src/Advanced-OpenGL/5.Framebuffers/: CMakeLists.txt  Framebuffers.cpp  screen.fs
src/Advanced-OpenGL/6.Cubemaps/: CMakeLists.txt  Cubemaps.cpp  reflection.fs  refraction.fs  screen.fs
src/Getting-Started/2.Shaders/: CMakeLists.txt
src/Getting-Started/3.Textures/: CMakeLists.txt
src/Getting-Started/4.Transformations/: CMakeLists.txt  Transformations.cpp
src/Getting-Started/5.Coord-Systems/: CMakeLists.txt  Coord-Systems.cpp
src/Getting-Started/6.Camera/: CMakeLists.txt  Camera.cpp
src/Hello-Triangle/: Exercise2.cpp  Exercise3.cpp
src/Lighting/1.Colors/: CMakeLists.txt  Colors.cpp
src/Lighting/2.Basic-Lighting/: Basic-Lighting.cpp  CMakeLists.txt  colors.fs  colors.vs
src/Lighting/3.Materials/: CMakeLists.txt  Materials.cpp  colors.fs
src/Lighting/4.Lighting-Maps/: CMakeLists.txt  Lighting-Maps.cpp  colors.fs
src/Lighting/5.Light-Casters/: CMakeLists.txt  Light-Casters.cpp  colors.fs
src/Lighting/6.Multiple-Lights/: CMakeLists.txt  Multiple-Lights.cpp
src/Model-Loading/1.Model-Loading/: CMakeLists.txt  Model-Loading.cpp  colors.fs  lit.fs
src/Shaders/: example.cpp
src/Textures/: Textures.cpp
src/Transformations/: Transformations.cpp
